--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,189 +1,210 @@
 /* pages/mine/mine.wxss */
 @import "../../lib/weui.wxss";
+
 .page {
-background-color:#f5f7fa;
-height:100%;
-width: 100%;
+  background-color: #f5f7fa;
+  height: 100%;
+  width: 100%;
 }
-.hide{
+
+.hide {
   display: none;
 }
-.show{
+
+.show {
   display: block;
 }
+
 #mine {
   display: flex;
   flex-direction: column;
   position: absolute;
 }
+
 .top {
   box-sizing: border-box;
   width: 100%;
   height: 330rpx;
-  background: #ffffff;
+  background: #fff;
   border-bottom: 20rpx solid #f5f7fa;
-  margin-bottom: 20rpx;
+  margin-bottom: 25rpx;
 }
+
 .top_top {
   height: 190rpx;
   width: 100%;
   background-color: #906337;
   position: relative;
 }
+
 .top_top_left {
   float: left;
-  width: 25%;
+  width: 27%;
   height: 190rpx;
 }
+
 .userinfo-avatar {
-overflow: hidden;
-display: block;
-border-radius: 50%;
-border: 2px solid #fff;
-/* box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); */
-width: 110rpx;
-height: 110rpx;
-margin-top:22%;
-margin-left: 15%;/* margin-top:42rpx;margin-left: 28rpx;*/
+  overflow: hidden;
+  display: block;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  /* box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); */
+  width: 120rpx;
+  height: 120rpx;
+  margin-top: 21%;
+  margin-left: 15%; /* margin-top:42rpx;margin-left: 28rpx;*/
 }
+
 .top_top_right {
   float: left;
-  width: 60%;
-  font-size: 32rpx;
-  padding-top:50rpx;
-  color: #ffffff;
+  width: 58%;
+  font-size: 35rpx;
+  padding-top: 50rpx;
+  color: #fff;
 }
-.top_top_right_top{
+
+.top_top_right_top {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 50rpx;
 }
+
 .top-left-text {
   /* width: 300rpx; */
   float: left;
 }
-.xiugai{
+
+.xiugai {
   float: left;
   height: 32rpx;
   width: 35rpx;
   padding-left: 15rpx;
   padding-top: 12rpx;
 }
+
 .top_top_right_bottom {
-  color:#e9e0d7;
-  font-size: 25rpx;
+  color: #e9e0d7;
+  font-size: 28rpx;
 }
+
 .top_top_last {
   width: 15%;
   float: left;
-  font-size: 24rpx;
-  color: #ffffff;
+  font-size: 27rpx;
+  color: #fff;
   margin-top: 20rpx;
-  background-color:#906337;
-  outline:none;
+  background-color: #906337;
+  outline: none;
 }
-.top_top_last::after{
-  border: none; 
+
+.top_top_last::after {
+  border: none;
 }
+
 .top_bottom {
-  height:140rpx;
+  height: 145rpx;
   width: 100%;
-  font-size: 25rpx;
+  font-size: 28rpx;
   background-color: #9b754b;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  color: #ffffff;
+  color: #fff;
 }
-.top_bottom_left{
+
+.top_bottom_item {
   margin-top: 10rpx;
   float: left;
   width: 50%;
   margin-bottom: 10rpx;
 }
-.top_bottom_left1{
+
+.top_bottom_left1 {
   margin-top: 20rpx;
   width: 0;
   border-right: 2rpx solid #e5e5e5;
   margin-bottom: 20rpx;
   opacity: 0.2;
 }
-.top_bottom_left_top {
+
+.top_bottom_item_top {
   margin-left: 160rpx;
   height: 60rpx;
 }
-.top_bottom_left_top_left {
-   font-size: 45rpx;
-   float:left;
-   margin-right: 15rpx;
-}
-.top_bottom_left_top_right {
-   padding-top: 25rpx;
-   font-size: 25rpx;
-}
-.top_bottom_left_bottom {
-  position: absolute;
-  top:265rpx;
-  left: 136rpx;
-  font-size: 28rpx;
-}
-.top_bottom_right{
-  margin-top: 10rpx;
+
+.top_bottom_item_top_left {
+  font-size: 48rpx;
   float: left;
-  width: 50%;
-  margin-bottom: 10rpx;
+  margin-right: 15rpx;
 }
-.top_bottom_right_top {
-  font-size: 25rpx;
-  margin-left: 150rpx;
-}
-.top_bottom_right_bottom {
-  position: absolute;
-  top:265rpx;
-  right: 122rpx;
+
+.top_bottom_item_top_right {
+  padding-top: 24rpx;
   font-size: 28rpx;
 }
+
+.top_bottom_item_bottom {
+  position: absolute;
+  top: 265rpx;
+  font-size: 30rpx;
+}
+
+.top_bottom_left_bottom {
+  left: 134rpx;
+}
+
+.top_bottom_right_bottom {
+  right: 110rpx;
+}
+
 .bottom {
-  background-color: #ffffff;
+  background-color: #fff;
   height: 80rpx;
   /* border-bottom: 2rpx solid #e5e5e5; */
 }
-.border {
-width: auto;
-height: auto;
-}
-.borderleft{
-float: left;
-width:  30rpx;
- border-bottom:2rpx solid #ffffff;
-   z-index: 10;
-}
-.borderright{
-float: left;
-width:  720rpx;
- border-bottom:2rpx solid #e5e5e5;
 
-   z-index: 10;
+.border {
+  width: auto;
+  height: auto;
 }
-.bottom_NoBorderBottom{
-  background-color: #ffffff;
+
+.borderleft {
+  float: left;
+  width: 30rpx;
+  border-bottom: 2rpx solid #fff;
+  z-index: 10;
+}
+
+.borderright {
+  float: left;
+  width: 720rpx;
+  border-bottom: 2rpx solid #e5e5e5;
+  z-index: 10;
+}
+
+.bottom_NoBorderBottom {
+  background-color: #fff;
   height: 80rpx;
 }
+
 .bottom_index {
-  padding-top: 20rpx;
+  padding-top: 16rpx;
   padding-left: 30rpx;
-  font-size: 28rpx;
+  font-size: 30rpx;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.weui-cell__bd{
+
+.weui-cell__bd {
   width: 400rpx;
 }
-.weui-cell__ft{
+
+.weui-cell__ft {
   margin-right: 30rpx;
 }
+
 .roundRed {
   float: left;
   height: 10rpx;
@@ -192,89 +213,103 @@ width:  720rpx;
   background-color: red;
   margin-top: 5rpx;
   margin-left: 25rpx;
-  position: absolute
+  position: absolute;
 }
+
 .title_image {
   float: left;
   margin-top: 6rpx;
-  height: 30rpx;
-  width: 32rpx; 
+  height: 38rpx;
+  width: 40rpx;
   overflow: hidden;
 }
+
 .bottom_mid {
   float: left;
   margin-left: 10rpx;
 }
+
 .surebutton {
-position: absolute;
-top:48rpx;
-right: 140rpx;
-z-index:4;
-height: 40rpx;
-width: 95rpx;
-padding-left: 15rpx;
-margin-top: 12rpx;
-font-size: 22rpx;
-padding: 0;
-background-color: #9b754b;
-line-height: 40rpx;
+  position: absolute;
+  top: 57rpx;
+  right: 140rpx;
+  z-index: 4;
+  height: 46rpx;
+  line-height: 46rpx;
+  width: 95rpx;
+  padding-left: 15rpx;
+  font-size: 25rpx;
+  padding: 0;
+  background-color: #9b754b;
 }
+
 .ad_popError {
-position: absolute;
-top:0;
-background-color: #c9bc9c;
-text-align: center;
-font-size: 32rpx;
-width: 100%;
-color: white;
-z-index: 9999;
+  position: absolute;
+  top: 0;
+  background-color: #c9bc9c;
+  text-align: center;
+  font-size: 35rpx;
+  width: 100%;
+  color: white;
+  z-index: 9999;
 }
-.forShowMountain{
+
+.forShowMountain {
   position: absolute;
   right: 0rpx;
-  top:135rpx;
+  top: 135rpx;
   height: 55rpx;
-  width:300rpx;
- 
+  width: 300rpx;
 }
-.forShowMountain image{
+
+.forShowMountain image {
   height: 55rpx;
-  width:300rpx;
+  width: 300rpx;
 }
-.for_small_mountain_left{
+
+.for_small_mountain_left {
   position: absolute;
   left: 0rpx;
-  top:290rpx;
+  top: 290rpx;
   height: 40rpx;
-  width:120rpx;
+  width: 120rpx;
 }
-.for_small_mountain_left image{
+
+.for_small_mountain_left image {
   height: 40rpx;
-  width:120rpx;
+  width: 120rpx;
 }
-.for_small_mountain_right{
+
+.for_small_mountain_right {
   position: absolute;
   left: 120rpx;
-  top:300rpx;
+  top: 300rpx;
   height: 25rpx;
-  width:80rpx;
+  width: 80rpx;
 }
-.for_small_mountain_right image{
+
+.for_small_mountain_right image {
   height: 25rpx;
-  width:80rpx;
+  width: 80rpx;
 }
-.headimgBtn{
+
+.headimgBtn {
   overflow: hidden;
   display: block;
   border-radius: 50%;
   /* box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2); */
   width: 110rpx;
   height: 110rpx;
-  border: none
-  }
-  .imgJumpBtn{
-    height:100%;width:100%;float:left;background-color:#906337;
-  }
-  .imgJumpBtn::after{
-    border: none
-  }
+  border: none;
+}
+
+.imgJumpBtn {
+  height: 100%;
+  width: 100%;
+  float: left;
+  background-color: #906337;
+}
+
+.imgJumpBtn::after {
+  border: none;
+}
