--- a/pages/homePage/homePage.wxss
+++ b/pages/homePage/homePage.wxss
@@ -64,6 +64,9 @@ page{
   font-size: 36rpx;
   color:#333;
   margin-left: 2.5%;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  white-space:nowrap;
 }
 .top_bottom_left_top image{
   height: 26rpx;
